--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <li>Children's Play Area</li>
   <li>Canteen</li>
   <li>Coding/Robotics Room</li>
+  <li>Football/Sports Field</li>
 </ul>
 </div>
 <div class="gap"></div>
@@ -59,14 +60,11 @@ more...</a></li>
 <h2 class="title"><span>Welcome to Jamnabai Narsee <span>School</span></span></h2>
 <div class="row2">
 <p><strong>Jamnabai Narsee School</strong> has shown many outstanding achievements in the fields of art,acting,studies and music. <a href="https://www.jns.ac.in/">Jamnabai Narsee School </a>looks promising and is likely to achieve great heights in no time. <br>
-It , <a href="#">but also the leap
-into electronic typesetting</a>, remaining essentially unchanged. It
-was popularised in the 1960s with the release of Letraset sheets
-containing Lorem Ipsum passages</p>
+It recently celebrated 50 years and they had a grand celebration encouraging students to participate in the event. <a href="https://www.youtube.com/watch?v=kt1BxQpKrRw">The full video link.</a></p>
 <ul class="list-home">
-  <li><strong>Lorem Ipsum is simply dummy text</strong></li>
-  <li><strong>of the printing and typesetting industry</strong></li>
-  <li><strong>Lorem Ipsum has been the industry's</strong></li>
+  <li><strong>The school is primirally located in Juhu <a href="https://www.google.co.in/maps/place/Jamnabai+Narsee+School/@19.1055178,72.8300567,17z/data=!4m5!3m4!1s0x3be7c9c0eeab1e3b:0x1f3cc9b2d7d55d7b!8m2!3d19.1056773!4d72.8321167">The exact location</a></strong></li>
+  <li><strong>The trustee Sujay Jairaj and Jairaj Thackar's <a href="https://www.jns.ac.in/message_from_managing_trustee.htm">Message</a></strong></li>
+  <li><strong>The prinicpal Zeenat Bhojoboy's <a href="https://www.jns.ac.in/from_the_principalands_desk.htm">message</a></strong></li>
 </ul>
 </div>
 </div>
@@ -75,13 +73,10 @@ containing Lorem Ipsum passages</p>
 <h2 class="title"><span>About <span>Us</span></span></h2>
 <div class="row" style="padding-left: 40px;">
 <p>&nbsp;</p>
-<p><strong>Lorem Ipsum is simply dummy text</strong> of the printing
-and typesetting industry. <a href="#">Lorem Ipsum has been</a> the
-industry's standard dummy text ever since the 1500s.</p>
+<p><strong>Jamnabai Narsee School was founded on 17 January 1971. It was established and managed by the Narsee Monjee Educational Trust. It is a co-educational, English medium school.</p>
 <p>&nbsp;</p>
-<p>It has survived not only five centuries, <a href="#">but also the
-leap into electronic typesetting</a>, remaining essentially unchanged.</p>
-<p align="right"><a href="#" class="more2">read more</a></p>
+<p> This school is an 'Unaided Linguistic-Minority Institution', affiliated to the Council for the Indian School Certificate Examinations-New Delhi, and to International Baccalaureate Organisation,[2] Geneva preparing students for the Indian Certificate of Secondary Education (ICSE) Examination at the end of the 10th grade and the International Baccalaureate Diploma (IBDP) at the end of the 12th.</p>
+<p align="right"><a href="about us.html" class="more2">read more</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -95,15 +90,11 @@ leap into electronic typesetting</a>, remaining essentially unchanged.</p>
 <h2 class="title"><span>Recent <span>Articles</span></span></h2>
 <div class="row">
 <p>&nbsp;</p>
-<p><strong>Lorem Ipsum is simply dummy text</strong> of the printing
-and typesetting industry. <a href="#">Lorem Ipsum has been</a> the
-industry's standard dummy text ever since the 1500s.</p>
+<p><strong>The school recently made headlines in newspapers when Jamnabai Narsee student Juhi Kajaria scored AIR 1 in the ICSE examinations held in March 2019. She scored an astounding 99.6%. Other students Forum Sanjanwala and Jugal Patel got AIR 2 and AIR 3 respectively.</p>
 <p>&nbsp;</p>
-<p>It has survived not only five centuries, <a href="#">but also the
-leap into electronic typesetting</a>, remaining essentially unchanged.
-It was popularised in the 1960s with the release.</p>
+<p>The students recently played a match against all the bollywood stars on the Jamnabai Narsee School playground<a href="https://www.youtube.com/watch?v=dEqdM7DW2y8&t=35s"> The match they played</a></p>
 <p>&nbsp;</p>
-<p align="right"><a href="#" class="more2">read more</a></p>
+<p align="right"><a href="https://www.jns.ac.in" class="more2">read more</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -124,7 +115,7 @@ It was popularised in the 1960s with the release.</p>
   <li style="border-left: medium none;"><a href="index.html">Home</a></li>
   <li><a href="about us.html">About Us</a></li>
   <li><a href="https://www.jns.ac.in/">Recent articles</a></li>
-  <li><a href="mailto: shahviahan8@gmail.com">Email</a></li>
+  <li><a href="Registration.html">Registratoin</a></li>
   <li><a href="resources.html">Resources</a></li>
   <li><a href="#">Links</a></li>
   <li><a href="#">Contact</a></li>
