--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ more...</a></li>
 <p><strong>Jamnabai Narsee School</strong> has shown many outstanding achievements in the fields of art,acting,studies and music. <a href="https://www.jns.ac.in/">Jamnabai Narsee School </a>looks promising and is likely to achieve great heights in no time. <br>
 It recently celebrated 50 years and they had a grand celebration encouraging students to participate in the event. <a href="https://www.youtube.com/watch?v=kt1BxQpKrRw">The full video link.</a></p>
 <ul class="list-home">
-  <li><strong>The school is primirally located in Juhu <a href="https://www.google.co.in/maps/place/Jamnabai+Narsee+School/@19.1055178,72.8300567,17z/data=!4m5!3m4!1s0x3be7c9c0eeab1e3b:0x1f3cc9b2d7d55d7b!8m2!3d19.1056773!4d72.8321167">The exact location</a></strong></li>
+  <li><strong>The school is primirally located in Juhu <a href="https://www.google.co.in/maps/place/Jamnabai+Narsee+School/@19.1055178,72.8300567,17z/data=!4m5!3m4!1s0x3be7c9c0eeab1e3b:0x1f3cc9b2d7d55d7b!8m2!3d19.1056773!4d72.8321167">(The exact location
+    0</a></strong></li>
   <li><strong>The trustee Sujay Jairaj and Jairaj Thackar's <a href="https://www.jns.ac.in/message_from_managing_trustee.htm">Message</a></strong></li>
   <li><strong>The prinicpal Zeenat Bhojoboy's <a href="https://www.jns.ac.in/from_the_principalands_desk.htm">message</a></strong></li>
 </ul>
